--- a/Gobot/Gobot/compilerconfig.json
+++ b/Gobot/Gobot/compilerconfig.json
@@ -14,5 +14,9 @@
   {
     "outputFile": "Content/Account.css",
     "inputFile": "Content/Account.scss"
+  },
+  {
+    "outputFile": "Content/Index.css",
+    "inputFile": "Content/Index.scss"
   }
 ]
