--- a/Gobot/Gobot/compilerconfig.json
+++ b/Gobot/Gobot/compilerconfig.json
@@ -18,5 +18,9 @@
   {
     "outputFile": "Content/Index.css",
     "inputFile": "Content/Index.scss"
+  },
+  {
+    "outputFile": "Content/Home.css",
+    "inputFile": "Content/Home.scss"
   }
 ]
