Continued styling for /Account/Register.

--- a/Gobot/Gobot/compilerconfig.json
+++ b/Gobot/Gobot/compilerconfig.json
@@ -26,5 +26,9 @@
   {
     "outputFile": "Content/Register.css",
     "inputFile": "Content/Register.scss"
+  },
+  {
+    "outputFile": "Content/_global.css",
+    "inputFile": "Content/_global.scss"
   }
 ]
