- Avancer les fonction de AccountController - Créer fonction GetUserFromDB dans MySQLWrapper pour meilleure division du code - Avancer BetController - Clean HomeController et réparation - Renommer fichier PasswordManipulator - Enlever encapsulation de Bet, Team et Match

--- a/Gobot/Gobot/Gobot.csproj
+++ b/Gobot/Gobot/Gobot.csproj
@@ -197,7 +197,7 @@
     <Compile Include="Models\Match.cs" />
     <Compile Include="Models\MySQLWrapper.cs" />
     <Compile Include="LiveStreamHub.cs" />
-    <Compile Include="Models\PasswordManipulator.cs" />
+    <Compile Include="Models\PasswordEncrypter.cs" />
     <Compile Include="Models\Team.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
