--- a/Gobot/Gobot/Gobot.csproj
+++ b/Gobot/Gobot/Gobot.csproj
@@ -210,6 +210,12 @@
     <Content Include="Content\Account.min.css">
       <DependentUpon>Account.css</DependentUpon>
     </Content>
+    <Content Include="Content\Bet.css">
+      <DependentUpon>Bet.scss</DependentUpon>
+    </Content>
+    <Content Include="Content\Bet.min.css">
+      <DependentUpon>Bet.css</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -261,6 +267,7 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\Register.scss" />
+    <Content Include="Content\Bet.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\global.js" />
@@ -303,10 +310,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Bet\" />
     <Folder Include="Views\Stats\" />
     <Folder Include="Views\Support\" />
-    <Folder Include="Views\Watch\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
