Started styling for /Bet/Index

--- a/Gobot/Gobot/Gobot.csproj
+++ b/Gobot/Gobot/Gobot.csproj
@@ -242,12 +242,48 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\accountOption_triangle.png" />
+    <Content Include="Images\arrow_left.png" />
+    <Content Include="Images\arrow_right.png" />
     <Content Include="Images\bet.png" />
+    <Content Include="Images\check.png" />
+    <Content Include="Images\close.png" />
+    <Content Include="Images\close_red.png" />
+    <Content Include="Images\contact.png" />
+    <Content Include="Images\csgo.jpg" />
+    <Content Include="Images\ct_side.png" />
+    <Content Include="Images\dot.png" />
+    <Content Include="Images\faq.png" />
+    <Content Include="Images\games_played.png" />
+    <Content Include="Images\games_won.png" />
+    <Content Include="Images\gcCredit.png" />
+    <Content Include="Images\gobot_logo.png" />
     <Content Include="Images\inventory.png" />
+    <Content Include="Images\lock.png" />
+    <Content Include="Images\login_bg.png" />
+    <Content Include="Images\logout.png" />
+    <Content Include="Images\mail.png" />
     <Content Include="Images\matches.png" />
+    <Content Include="Images\option_changeEmail.png" />
+    <Content Include="Images\option_changeImg.png" />
+    <Content Include="Images\option_changePwd.png" />
+    <Content Include="Images\rep_end.png" />
+    <Content Include="Images\rep_start.png" />
+    <Content Include="Images\send.png" />
+    <Content Include="Images\settings.png" />
+    <Content Include="Images\settings_hover.png" />
     <Content Include="Images\shop.png" />
-    <Content Include="Images\team.png" />
-    <Content Include="Images\transactions.png" />
+    <Content Include="Images\stat_bets.png" />
+    <Content Include="Images\stat_matches.png" />
+    <Content Include="Images\stat_transactions.png" />
+    <Content Include="Images\stat_winLoss.png" />
+    <Content Include="Images\sub_bg.png" />
+    <Content Include="Images\support.png" />
+    <Content Include="Images\teams.png" />
+    <Content Include="Images\transactions2.png" />
+    <Content Include="Images\triangle.png" />
+    <Content Include="Images\t_side.png" />
+    <Content Include="Images\user.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\Menu.scss" />
@@ -282,7 +318,6 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\menu.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\respond.js" />
