--- a/Gobot/Gobot/compilerconfig.json
+++ b/Gobot/Gobot/compilerconfig.json
@@ -30,5 +30,9 @@
   {
     "outputFile": "Content/Bet.css",
     "inputFile": "Content/Bet.scss"
+  },
+  {
+    "outputFile": "Content/Teams.css",
+    "inputFile": "Content/Teams.scss"
   }
 ]
