Created FAQ + modified how information is handled in /Stats/Teams and /Bet/Index + Adjusted styling for some pages.

--- a/Gobot/Gobot/compilerconfig.json
+++ b/Gobot/Gobot/compilerconfig.json
@@ -34,5 +34,9 @@
   {
     "outputFile": "Content/Teams.css",
     "inputFile": "Content/Teams.scss"
+  },
+  {
+    "outputFile": "Content/Support.css",
+    "inputFile": "Content/Support.scss"
   }
 ]
