--- a/Gobot/Gobot/Gobot.csproj
+++ b/Gobot/Gobot/Gobot.csproj
@@ -238,6 +238,12 @@
     <Content Include="Content\Register.min.css">
       <DependentUpon>Register.css</DependentUpon>
     </Content>
+    <Content Include="Content\Support.css">
+      <DependentUpon>Support.scss</DependentUpon>
+    </Content>
+    <Content Include="Content\Support.min.css">
+      <DependentUpon>Support.css</DependentUpon>
+    </Content>
     <Content Include="Content\Teams.css">
       <DependentUpon>Teams.scss</DependentUpon>
     </Content>
@@ -311,6 +317,7 @@
     <Content Include="Content\Register.scss" />
     <Content Include="Content\Bet.scss" />
     <Content Include="Content\Teams.scss" />
+    <Content Include="Content\Support.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\global.js" />
@@ -350,10 +357,10 @@
     <Content Include="Views\Watch\Index.cshtml" />
     <Content Include="Views\Bet\Index.cshtml" />
     <Content Include="Views\Stats\Teams.cshtml" />
+    <Content Include="Views\Support\faq.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Support\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
