--- a/Gobot/Gobot/compilerconfig.json
+++ b/Gobot/Gobot/compilerconfig.json
@@ -38,5 +38,9 @@
   {
     "outputFile": "Content/Support.css",
     "inputFile": "Content/Support.scss"
+  },
+  {
+    "outputFile": "Content/Watch.css",
+    "inputFile": "Content/Watch.scss"
   }
 ]
