--- a/Gobot/Gobot/Gobot.csproj
+++ b/Gobot/Gobot/Gobot.csproj
@@ -365,6 +365,8 @@
     <Content Include="Views\Bet\Index.cshtml" />
     <Content Include="Views\Stats\Teams.cshtml" />
     <Content Include="Views\Support\faq.cshtml" />
+    <Content Include="Views\Stats\History.cshtml" />
+    <Content Include="Views\Stats\Schedule.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
