--- a/Serveur CS GO/Liaison BD - CSGO/Liaison BD - CSGO/Liaison BD - CSGO.csproj
+++ b/Serveur CS GO/Liaison BD - CSGO/Liaison BD - CSGO/Liaison BD - CSGO.csproj
@@ -51,6 +51,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SourceRconLib\SourceRconLib.csproj">
+      <Project>{6f184ea5-616c-4a08-aade-4b171f4bbda0}</Project>
+      <Name>SourceRconLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
