Created Ad view.

--- a/Gobot/Gobot/Gobot.csproj
+++ b/Gobot/Gobot/Gobot.csproj
@@ -367,7 +367,7 @@
     <Content Include="Views\Support\faq.cshtml" />
     <Content Include="Views\Stats\History.cshtml" />
     <Content Include="Views\Stats\Schedule.cshtml" />
-    <Content Include="Views\Bet\ad.cshtml" />
+    <Content Include="Views\Bet\Ad.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
