--- a/Gobot/Gobot/Gobot.csproj
+++ b/Gobot/Gobot/Gobot.csproj
@@ -325,6 +325,7 @@
     <Content Include="Content\Teams.scss" />
     <Content Include="Content\Support.scss" />
     <Content Include="Content\Watch.scss" />
+    <Content Include="Content\_utils.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\global.js" />
