--- a/Gobot/Gobot/Gobot.csproj
+++ b/Gobot/Gobot/Gobot.csproj
@@ -377,6 +377,7 @@
     <Content Include="Views\Stats\History.cshtml" />
     <Content Include="Views\Stats\Schedule.cshtml" />
     <Content Include="Views\Bet\Ad.cshtml" />
+    <Content Include="Views\Support\Contact.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
