--- a/Gobot/Gobot/Views/Web.config
+++ b/Gobot/Gobot/Views/Web.config
@@ -31,6 +31,12 @@
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
+    <httpErrors errorMode="DetailedLocalOnly">
+      <remove statusCode="404"/>
+      <error statusCode="404" path="404.html" responseMode="File"/>
+      <remove statusCode="500"/>
+      <error statusCode="500" path="500.html" responseMode="File"/>
+    </httpErrors>
   </system.webServer>
 
   <system.web>
@@ -39,5 +45,11 @@
         <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
+
+    <customErrors mode="On" redirectMode="ResponseRewrite" defaultRedirect="~/Errors/error.aspx">
+      <error statusCode="403" redirect="~/Errors/403.aspx"/>
+      <error statusCode="404" redirect="~/Errors/404.aspx"/>
+      <error statusCode="500" redirect="~/Errors/500.aspx"/>
+    </customErrors>
   </system.web>
 </configuration>
