Continued handling of bet users. C# NEEDS WORK. Also, remove buttons and links on /Account/Index if user is not the session user.

--- a/Gobot/Gobot/Gobot.csproj
+++ b/Gobot/Gobot/Gobot.csproj
@@ -315,6 +315,7 @@
     <Content Include="Images\t_side.png" />
     <Content Include="Images\user.png" />
     <Content Include="Scripts\ads.js" />
+    <Content Include="Scripts\bets.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\Menu.scss" />
