--- a/Gobot/Gobot/Gobot.csproj
+++ b/Gobot/Gobot/Gobot.csproj
@@ -341,6 +341,7 @@
     <Content Include="Content\Watch.scss" />
     <Content Include="Content\_utils.scss" />
     <Content Include="Content\GetCredits.scss" />
+    <None Include="Properties\PublishProfiles\GoBot.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\global.js" />
