fucking nothing. just crap.

--- a/Gobot/Gobot/Views/Web.config
+++ b/Gobot/Gobot/Views/Web.config
@@ -39,17 +39,17 @@
     </httpErrors>
   </system.webServer>
 
-  <system.web>
-    <compilation>
-      <assemblies>
-        <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-      </assemblies>
-    </compilation>
-
-    <customErrors mode="On" redirectMode="ResponseRewrite" defaultRedirect="~/Errors/error.aspx">
-      <error statusCode="403" redirect="~/Errors/403.aspx"/>
-      <error statusCode="404" redirect="~/Errors/404.aspx"/>
-      <error statusCode="500" redirect="~/Errors/500.aspx"/>
-    </customErrors>
-  </system.web>
+    <system.web>
+      <compilation debug="true" urlLinePragmas="true">
+        <assemblies>
+          <add assembly="MySql.Data,Version=6.6.4.0, Culture=neutral,PublicKeyToken=C5687FC88969C44D"/>
+        </assemblies>
+      </compilation>
+    </system.web>
+    <system.data>
+      <DbProviderFactories>
+        <remove invariant="MySql.Data.MySql.Client"/>
+        <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL"    type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data,Version=6.6.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/>
+      </DbProviderFactories>
+    </system.data>
 </configuration>
