--- a/Gobot/Gobot/compilerconfig.json
+++ b/Gobot/Gobot/compilerconfig.json
@@ -50,5 +50,9 @@
   {
     "outputFile": "Content/GetCredits.css",
     "inputFile": "Content/GetCredits.scss"
+  },
+  {
+    "outputFile": "Errors/error.css",
+    "inputFile": "Errors/error.scss"
   }
 ]
