Installer video.js (Nuget) Installer plugins de ads pour video.js (à la main) Implémenter un lecteur qui fait jouer une pub sans faire jouer de vidéo après.

--- a/Gobot/Gobot/packages.config
+++ b/Gobot/Gobot/packages.config
@@ -40,5 +40,6 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="PBKDF2.NET" version="2.0.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
+  <package id="VideoJS" version="4.10.2" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
