--- a/Gobot/Gobot/Gobot.csproj
+++ b/Gobot/Gobot/Gobot.csproj
@@ -257,6 +257,11 @@
     <Content Include="Content\Teams.min.css">
       <DependentUpon>Teams.css</DependentUpon>
     </Content>
+    <Content Include="Content\video-js.css" />
+    <Content Include="Content\video-js.min.css" />
+    <Content Include="Content\video-js.swf" />
+    <Content Include="Content\videojs.ads.css" />
+    <Content Include="Content\videojs.ima.css" />
     <Content Include="Content\Watch.css">
       <DependentUpon>Watch.scss</DependentUpon>
     </Content>
@@ -279,6 +284,7 @@
     </Content>
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="fonts\vjs.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Images\accountOption_triangle.png" />
@@ -351,9 +357,17 @@
     <Content Include="Content\_utils.scss" />
     <Content Include="Content\GetCredits.scss" />
     <Content Include="Errors\error.scss" />
+    <Content Include="fonts\vjs.woff" />
+    <Content Include="fonts\vjs.ttf" />
+    <Content Include="fonts\vjs.eot" />
+    <Content Include="Content\video-js.less" />
+    <Content Include="Content\plugin.scss" />
     <None Include="Properties\PublishProfiles\GoBot.pubxml" />
+    <Content Include="Scripts\.jshintrc" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
+    <Content Include="Scripts\cancelContentPlay.js" />
+    <Content Include="Scripts\contentupdate.js" />
     <Content Include="Scripts\global.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
@@ -366,12 +380,31 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\macros.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\plugin.js" />
+    <Content Include="Scripts\redispatch.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\snapshot.js" />
+    <Content Include="Scripts\video.dev.js" />
+    <Content Include="Scripts\video.js" />
+    <Content Include="Scripts\videojs.ads.js" />
+    <Content Include="Scripts\videojs.ima.js" />
+    <Content Include="Scripts\vjs-lang\de.js" />
+    <Content Include="Scripts\vjs-lang\es.js" />
+    <Content Include="Scripts\vjs-lang\fr.js" />
+    <Content Include="Scripts\vjs-lang\it.js" />
+    <Content Include="Scripts\vjs-lang\ja.js" />
+    <Content Include="Scripts\vjs-lang\ko.js" />
+    <Content Include="Scripts\vjs-lang\nl.js" />
+    <Content Include="Scripts\vjs-lang\pt-BR.js" />
+    <Content Include="Scripts\vjs-lang\ru.js" />
+    <Content Include="Scripts\vjs-lang\uk.js" />
+    <Content Include="Scripts\vjs-lang\zh.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
