--- a/Gobot/Gobot/compilerconfig.json
+++ b/Gobot/Gobot/compilerconfig.json
@@ -1,58 +1,72 @@
-﻿[
+[
   {
     "outputFile": "Content/Menu.css",
-    "inputFile": "Content/Menu.scss"
+    "inputFile": "Content/Menu.scss",
+    "sourceMap": false
   },
   {
     "outputFile": "Content/Mixins.css",
-    "inputFile": "Content/Mixins.scss"
+    "inputFile": "Content/Mixins.scss",
+    "sourceMap": false
   },
   {
     "outputFile": "Content/Style.css",
-    "inputFile": "Content/Style.scss"
+    "inputFile": "Content/Style.scss",
+    "sourceMap": false
   },
   {
     "outputFile": "Content/Account.css",
-    "inputFile": "Content/Account.scss"
+    "inputFile": "Content/Account.scss",
+    "sourceMap": false
   },
   {
     "outputFile": "Content/Index.css",
-    "inputFile": "Content/Index.scss"
+    "inputFile": "Content/Index.scss",
+    "sourceMap": false
   },
   {
     "outputFile": "Content/Home.css",
-    "inputFile": "Content/Home.scss"
+    "inputFile": "Content/Home.scss",
+    "sourceMap": false
   },
   {
     "outputFile": "Content/Register.css",
-    "inputFile": "Content/Register.scss"
+    "inputFile": "Content/Register.scss",
+    "sourceMap": false
   },
   {
     "outputFile": "Content/Bet.css",
-    "inputFile": "Content/Bet.scss"
+    "inputFile": "Content/Bet.scss",
+    "sourceMap": false
   },
   {
     "outputFile": "Content/Teams.css",
-    "inputFile": "Content/Teams.scss"
+    "inputFile": "Content/Teams.scss",
+    "sourceMap": false
   },
   {
     "outputFile": "Content/Support.css",
-    "inputFile": "Content/Support.scss"
+    "inputFile": "Content/Support.scss",
+    "sourceMap": false
   },
   {
     "outputFile": "Content/Watch.css",
-    "inputFile": "Content/Watch.scss"
+    "inputFile": "Content/Watch.scss",
+    "sourceMap": false
   },
   {
     "outputFile": "Content/Ad.css",
-    "inputFile": "Content/Ad.scss"
+    "inputFile": "Content/Ad.scss",
+    "sourceMap": false
   },
   {
     "outputFile": "Content/GetCredits.css",
-    "inputFile": "Content/GetCredits.scss"
+    "inputFile": "Content/GetCredits.scss",
+    "sourceMap": false
   },
   {
     "outputFile": "Errors/error.css",
-    "inputFile": "Errors/error.scss"
+    "inputFile": "Errors/error.scss",
+    "sourceMap": false
   }
 ]
